tests/NormalTests/paczka1/fuzzy1/54454049.err
Error in line 4: A363 S600 31,4
Error in line 7: Ve3uhJpjMOc S600 55,3
Error in line 8: Ve3uhJpjMOc A985 62,7
Error in line 16: 7UCGONy5 A363 9,8
Error in line 21: A363 A985 9,3
Error in line 25: 7UCGONy5 A985 98,3
Error in line 32: A363 A363 15,0
Error in line 37: Ve3uhJpjMOc A343 68,22
